--- a/.github/workflows/task_one.yaml
+++ b/.github/workflows/task_one.yaml
@@ -8,6 +8,11 @@ jobs:
     name: firstTask
     runs-on: ubuntu-latest
     steps:
-      - name: run bash command
-        run: echo "Hello Github Action"
+      - name: run bash command Before
+        run: ls
+        shell: bash
+      - name: run Checkout like git clone <my-repo>
+        uses: action/checkout@v3
+      - name: run bash After command
+        run: ls
         shell: bash
